osd: build_incremental_map_msg: behave if we have latest full but not incremental

Fixes c004953eacda80ff594c6142e022b1f5475aa142 and
follow-on 5c9fbf306565c6cb852b50a62d475cf02a41aeb9

Fixes: http://tracker.ceph.com/issues/38330
Signed-off-by: Sage Weil <sage@redhat.com>